--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@
   add softfpu from glibc for powerpcspe (need to pass SOFTFPU=1 to make)
   ppc64 little endian port (Christian Seiler)
   mips64 little endian port (Christian Seiler)
+  aarch64 port (Christian Seiler)
 
 0.33:
   first stab at getting TLS to work in actual threads
