fix longjmp on mobile armv7 (Christian Seiler)

--- a/CHANGES
+++ b/CHANGES
@@ -44,6 +44,7 @@
   mips64 little endian port (Christian Seiler)
   aarch64 port (Christian Seiler)
   parisc fixes (Gerrit Pape, John David Anglin, Helge Deller, Christian Seiler)
+  fix longjmp on mobile armv7 (Christian Seiler)
 
 0.33:
   first stab at getting TLS to work in actual threads
