powerpc fixes (Gerrit Pape, Christian Seiler)

--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,7 @@
   parisc fixes (Gerrit Pape, John David Anglin, Helge Deller, Christian Seiler)
   fix longjmp on mobile armv7 (Christian Seiler)
   alpha fixes (Christian Seiler, Thorsten Glaser)
+  powerpc fixes (Gerrit Pape, Christian Seiler)
 
 0.33:
   first stab at getting TLS to work in actual threads
