add really crappy pthread_rwclock implementation for openssl 1.1

--- a/CHANGES
+++ b/CHANGES
@@ -50,6 +50,7 @@
   sparc64 fixes (Christian Seiler)
   update setjmp/longjmp on s390x to use 64-bit ABI (Christian Seiler)
   SECURITY: x32 fixes: one of them could lead to memory corruption because struct stat was declared too short (Christian Seiler)
+  add really crappy pthread_rwclock implementation for openssl 1.1
 
 0.33:
   first stab at getting TLS to work in actual threads
