--- a/CHANGES
+++ b/CHANGES
@@ -52,6 +52,7 @@
   SECURITY: x32 fixes: one of them could lead to memory corruption because struct stat was declared too short (Christian Seiler)
   add really crappy pthread_rwclock implementation for openssl 1.1
   move getrandom and getentropy declarations to <sys/random.h> to match glibc 2.25
+  add secure_getenv
 
 0.33:
   first stab at getting TLS to work in actual threads
